--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -38,6 +38,7 @@
     <script src="lib/floatingMenu/ion-floating-menu.js" type="text/javascript"></script>
     <!--renderSheet-->
     <script src="js/renderSheet.js"></script>
+    <script src="js/common.js"></script>
     <!--validation-->
     <script src="js/validation.js"></script>
   </head>
